--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ google-auth==1.30.0
 google-auth-oauthlib==0.4.4
 google-pasta==0.2.0
 grpcio==1.34.1
+gunicorn==20.0.4
 h5py==3.1.0
 idna==2.10
 importlib-metadata==4.0.1
